RBAC System-Phase 3(Backend): Applied strict RBAC endpoint locks and updated all the dashboard pages routing with roles and access control